fix: calendar tooltip on mobile on load, scrollbar

--- a/#src/scss/module/_calendar.scss
+++ b/#src/scss/module/_calendar.scss
@@ -178,7 +178,7 @@ div[data-tippy-root] {
 
   /* Handle */
   &::-webkit-scrollbar-thumb {
-    background: #000;
+    background: #C0C0C0;
   }
 
   /* Handle on hover */
